--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
