--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "license": "MIT",
   "main": "src/server.ts",
   "scripts": {
-    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
-    "build": "tsc -p .",
-    "postinstall": "tsc -p ."
+    "build": "rimraf ./dist && tsc",
+    "start": "yarn build && node dist/server.js"
   },
   "dependencies": {
     "colors": "^1.4.0",
@@ -20,6 +19,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
